Added ability to import profile picture from Facebook

--- a/enHueco/Views/es.lproj/Main.strings
+++ b/enHueco/Views/es.lproj/Main.strings
@@ -39,7 +39,7 @@
 "7ez-YR-Urp.text" = "Pepito Fernando Perez Uribe";
 
 /* Class = "UIButton"; normalTitle = "Close"; ObjectID = "7k9-vr-gPU"; */
-"7k9-vr-gPU.normalTitle" = "Close";
+"7k9-vr-gPU.normalTitle" = "Cerrar";
 
 /* Class = "UITabBarItem"; title = "En Hueco"; ObjectID = "9Jr-OP-8kt"; */
 "9Jr-OP-8kt.title" = "En Hueco";
