Complete and test delete friend implementation. Remove notification center broadcasts in favor of completion handler closures in many places where notifications don't make sense.

--- a/enHueco/es.lproj/General.strings
+++ b/enHueco/es.lproj/General.strings
@@ -44,3 +44,6 @@
 "OKIwillCheck" = "OK, lo revisaré.";
 
 "AreYouSureDeleteEventMessage" = "¿Estás seguro que quieres eliminar este evento?";
+
+"options" = "Opciones";
+"sorry_unknown_error" = "Lo sentimos, ocurrió un error desconocido";
