--- a/enHueco/Base.lproj/General.strings
+++ b/enHueco/Base.lproj/General.strings
@@ -44,3 +44,6 @@
 "OKIwillCheck" = "OK, lo revisaré.";
 
 "AreYouSureDeleteEventMessage" = "¿Estás seguro que quieres eliminar este evento?";
+
+"options" = "Options";
+"sorry_unknown_error" = "Sorry, an unknown error has occurred";
