Add option to change the profile picture from the settings. Add options to the ImportProfileImageViewController in order for it to be reusable and be the default way of changing the profile picture. Change the logout procedure because the previous implementation is leaving multiple controllers instantiated behind each time.

--- a/enHueco/Base.lproj/General.strings
+++ b/enHueco/Base.lproj/General.strings
@@ -6,6 +6,10 @@
   Copyright © 2015 Diego Gómez. All rights reserved.
 */
 
+"import_photo_title" = "Import Image";
+"take_photo" = "Take Photo";
+"choose_photo" = "Choose Photo";
+
 "Monday" = "Monday";
 "Tuesday" = "Tuesday";
 "Wednesday" = "Wednesday";
