--- a/enHueco/es.lproj/General.strings
+++ b/enHueco/es.lproj/General.strings
@@ -50,6 +50,7 @@
 "CouldNotAddEventErrorMessage" = "Imposible agregar evento";
 "EventOverlapExplanation" = "El evento que estas tratando de agregar se cruza con algún otro evento en tu calendario en alguno de los días que elegiste...";
 "OKIwillCheck" = "OK, lo revisaré.";
+"EventImportOverlapExplanation" = "¡El horario que estás intentando importar tiene eventos que se cruzan con otros existentes!";
 
 "AreYouSureDeleteEventMessage" = "¿Estás seguro que quieres eliminar este evento?";
 
